# trs-use-case

./: .gitignore  ARCHITECTURE_GUIDE.md  CLAUDE.md  MIGRATION_NOTES.md  README.md  README_AI_AGENT_INTEGRATION.md  SIMPLIFIED_ARCHITECTURE_GUIDE.md  demo_agent_aerospace.py  demo_agents.py  demo_ai_agent.py  demo_clean_agents.py  demo_fireworks_agent.py  demo_script_agent.py  demo_simplified_agents.py  load_balance.md  pyproject.toml  pytest.ini  test_clean_agent_integration.py  test_fireworks_integration.py  test_fireworks_mcp_integration.py  test_simple_agent.py  test_simplified_vs_original.py  trs-use-case.code-workspace  verify_agent_success.py
demo/: README.md
docs/: Implementation_02_Agent_Architecture.md  criteria_classification.md  workflow_system.md
evaluation/criteria/: criteria.md
example_workflows/comprehensive_loadset_processing/: README.md  run_workflow.py  workflow.json
example_workflows/comprehensive_loadset_processing/01_load_primary_loadset/: README.md  run.py  step.json
example_workflows/comprehensive_loadset_processing/02_load_comparison_loadset/: README.md  run.py  step.json
example_workflows/comprehensive_loadset_processing/03_convert_units/: README.md  run.py  step.json
example_workflows/comprehensive_loadset_processing/04_scale_loads/: README.md  run.py  step.json
example_workflows/comprehensive_loadset_processing/05_compare_loadsets/: README.md  run.py  step.json
example_workflows/comprehensive_loadset_processing/06_generate_envelope/: README.md  run.py  step.json
example_workflows/comprehensive_loadset_processing/07_export_to_ansys/: README.md  run.py  step.json
example_workflows/comprehensive_loadset_processing/08_generate_report/: README.md  run.py  step.json
solution/03_loads_processing/: 03_eval.py  03_run_hardcoded.py  process_loads.py  step_03_criteria.md  validators.py
solution/03_loads_processing/activities/: __init__.py  activity_03a.py  activity_03b.py  activity_03c.py  activity_03e  activity_03e.py  base.py  test_03d.py
solution/loads/: new_loads  new_loads.json  old_loads.json
standalone_eval/: 03_A_new_loads.json  README.md  requirements.txt  standalone_eval.py
test_outputs/ai_agent/: script.py  simple_math.json
tests/: conftest.py  test_agents.py  test_ai_agent_integration.py  test_anthropic_mcp_http_integration.py  test_anthropic_mcp_integration.py  test_anthropic_mcp_sse_integration.py  test_loads.py  test_loadset_comparison.py  test_loadset_enhanced.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_server_comparison.py  test_python_exec_agent_integration.py  test_python_exec_mcp_server.py  test_range_charts.py  test_script_agent_integration.py  test_script_exec_mcp_server.py  test_simple.py  test_simplified_agents_tdd.py  test_utils.py  verify_agent_tools.py
tests/agents/: conftest.py  test_agent_integration.py  test_ai_agent_integration.py  test_anthropic_mcp_http_integration.py  test_anthropic_mcp_integration.py  test_envelope_agent_integration.py  test_mcp_integration.py  test_python_exec_agent_integration.py  test_range_charts_visual.py  test_script_agent_integration.py
tests/evals/: README.md  __init__.py  conftest.py  demo_eval_usage.py  eval_framework.py  test_process_loads_eval.py  tool_call_eval.py
tests/mcps/: conftest.py  test_mcp_envelope.py  test_mcp_server.py  test_mcp_server_comparison.py  test_mcp_server_comprehensive.py  test_python_exec_mcp_server.py  test_script_exec_mcp_server.py
tests/tools/: conftest.py  test_load_balance.py  test_loadset_comparison.py  test_loadset_core.py  test_loadset_enhanced.py  test_loadset_envelope.py  test_range_charts.py  test_workflow_generator.py
tests/tools/loads/: example_ansys.inp
tests/visual_range_charts/: comparison_summary.txt
tools/: __init__.py  agent_client.py  agents.py  agents_v2.py  create_example_workflow.py  dependencies.py  fireworks_client.py  fireworks_mcp_agent.py  load_balance.py  loads.py  loads_agent.py  mcp_bridge.py  mcp_bridge.py.old  mcp_server.py  model_config.py  model_configs.py  python_exec_mcp_server.py  response_models.py  script_agent_client.py  script_exec_mcp_server.py  script_templates.py  test_async.py  test_final_ollama.py  workflow_generator.py  workflow_utils.py
tools/mcps/: __init__.py  loads_mcp_server.py  python_exec_mcp_server.py  script_exec_mcp_server.py  start_servers.py
use_case_definition/: 00_problem definition  01_EP_Static_Analysis  02_product_description
use_case_definition/data/: 03_C_new_loads.json
use_case_definition/documents/: 00_problem definition  01_EP_Static_Analysis
(+5 files in other folders)
