[project]
name = "trs-use-case"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.3.6",
    "fastmcp>=2.0.0",
    "python-dotenv>=1.1.1",
    "logfire>=3.23.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"  # Automatically detect async tests
asyncio_default_fixture_loop_scope = "module"  # async fixtures are valid per function (faster)
asyncio_default_test_loop_scope = "function"  # each test gets its own loop

# Output configuration
addopts = [
    "-v",                    # Verbose output
    "--tb=short",           # Shorter traceback format
    "--strict-markers",     # Strict marker usage
    "--strict-config",      # Strict config file usage
    "--color=yes",          # Colored output
    "--cov-report=xml:cov.xml",  # XML coverage report
]

# Markers for test categorization
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
]

# Minimum version
minversion = "6.0"

# Test session configuration
console_output_style = "progress"
junit_family = "xunit2"

[tool.coverage.run]
omit = [
    "tests/*",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.0.0",  # For parallel test execution
]
